--- a/main.css
+++ b/main.css
@@ -1,10 +1,49 @@
+@charset "UTF-8";
 body {
+  font-family: "Avenir", "Helvetica Neue", "Helvetica", "Arial", "Hiragino Sans", "ヒラギノ角ゴシック", YuGothic, "Yu Gothic", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic";
+  color: #333333;
   margin: 0px; }
 
+a {
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+.textLink__moreInfo {
+  color: #00619a; }
+
 .content {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto; }
+  margin: 40px 0; }
+  .content__inner {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative; }
+    .content__inner--footer {
+      padding: 16px 0; }
+
+.main {
+  display: inline-block;
+  width: calc(100% - 284px);
+  margin: 0 32px; }
+  .main__section:not(:last-child) {
+    margin-bottom: 40px; }
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 220px; }
+  .sidebar__list {
+    padding-left: 1.2em; }
+  .sidebar__listItem {
+    padding: 4px 0; }
+    .sidebar__listItem a {
+      display: inline-block;
+      width: 100%;
+      color: #333333; }
+    .sidebar__listItem:not(:first-child) {
+      margin-top: 8px; }
 
 .mv {
   width: 100%;
@@ -14,16 +53,47 @@ body {
   background-position: top; }
 
 .global-nav {
-  float: right;
-  margin: 40px 0 0;
-  list-style: none; }
+  margin: 0;
+  padding-top: 40px;
+  list-style: none;
+  text-align: right; }
   .global-nav__item {
     display: inline-block;
     margin: 0 8px;
     cursor: pointer; }
     .global-nav__item a {
       padding: 8px 16px;
-      color: #ffffff;
-      text-decoration: none; }
-    .global-nav__item:hover {
-      text-decoration: underline; }
+      color: #ffffff; }
+
+.heading {
+  font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
+  margin-top: 0; }
+  .heading__level1 {
+    font-size: 40px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #b7b7b7; }
+  .heading__level2 {
+    font-size: 24px; }
+  .heading__imgLink {
+    display: inline-block;
+    width: 100%;
+    height: 210px;
+    background-color: #000000;
+    position: relative;
+    overflow: hidden; }
+    .heading__imgLink img {
+      min-width: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+      .heading__imgLink img:hover {
+        opacity: .8; }
+
+.footer {
+  width: 100%;
+  background-color: #333333; }
+  .footer__copyRight {
+    display: block;
+    text-align: center;
+    color: #ffffff; }
