--- a/main.scss
+++ b/main.scss
@@ -78,7 +78,7 @@ a {
 .mv {
   width: 100%;
   height: 400px;
-  background-image: url(./assets/bg-portfolio.jpg);
+  background-image: url(./bg-portfolio.jpg);
   background-size: cover;
   background-position: top;
 }
