--- a/main.css
+++ b/main.css
@@ -1,17 +1,27 @@
 @charset "UTF-8";
+/* ---------------
+  variables 
+----------------- */
+/*
+  Reset default css
+*/
+html {
+  font-size: 93.75%; }
+
 body {
+  font-size: 1rem;
   font-family: "Avenir", "Helvetica Neue", "Helvetica", "Arial", "Hiragino Sans", "ヒラギノ角ゴシック", YuGothic, "Yu Gothic", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic";
   color: #333333;
-  margin: 0px; }
+  margin: 0; }
 
 a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
 
-.textLink__moreInfo {
-  color: #00619a; }
-
+/*  ---------------------
+  layouts
+------------------------- */
 .content {
   margin: 40px 0; }
   .content__inner {
@@ -24,7 +34,7 @@ a {
 
 .main {
   display: inline-block;
-  width: calc(100% - 284px);
+  width: calc(100% - (64px + 220px));
   margin: 0 32px; }
   .main__section:not(:last-child) {
     margin-bottom: 40px; }
@@ -45,31 +55,14 @@ a {
     .sidebar__listItem:not(:first-child) {
       margin-top: 8px; }
 
-.mv {
-  width: 100%;
-  height: 400px;
-  background-image: url(9c51512420d70040e8aab73d831949b5.jpg);
-  background-size: cover;
-  background-position: top; }
-
-.global-nav {
-  margin: 0;
-  padding-top: 40px;
-  list-style: none;
-  text-align: right; }
-  .global-nav__item {
-    display: inline-block;
-    margin: 0 8px;
-    cursor: pointer; }
-    .global-nav__item a {
-      padding: 8px 16px;
-      color: #ffffff; }
-
+/* ------------------
+  headings 
+-------------------- */
 .heading {
   font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
   margin-top: 0; }
   .heading__level1 {
-    font-size: 40px;
+    font-size: 2.66667rem;
     padding-bottom: 8px;
     border-bottom: 1px solid #b7b7b7; }
   .heading__level2 {
@@ -90,6 +83,25 @@ a {
       .heading__imgLink img:hover {
         opacity: .8; }
 
+.textLink-moreinfo {
+  color: #00619a; }
+
+/* -----------
+  Header & Footer
+-------------*/
+.global-nav {
+  margin: 0;
+  padding-top: 40px;
+  list-style: none;
+  text-align: right; }
+  .global-nav__item {
+    display: inline-block;
+    margin: 0 8px;
+    cursor: pointer; }
+    .global-nav__item a {
+      padding: 8px 16px;
+      color: #ffffff; }
+
 .footer {
   width: 100%;
   background-color: #333333; }
@@ -97,3 +109,13 @@ a {
     display: block;
     text-align: center;
     color: #ffffff; }
+
+/* ------------
+ Main visual 
+ ----------- */
+.mv {
+  width: 100%;
+  height: 400px;
+  background-image: url(9c51512420d70040e8aab73d831949b5.jpg);
+  background-size: cover;
+  background-position: top; }
