[clean] pull request#1への指摘事項修正

--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -8,8 +8,8 @@ html {
 
 body {
   font-size:            $font-size-base;
-  font-family:          $fontFamily-gothic;
-  color:                $fontColor-base;
+  font-family:          $fontfamily-gothic;
+  color:                $font-color-base;
   margin:               0;
 }
 
