--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ a {
 
 .main {
   display: inline-block;
-  width: calc(100% - (64px + 220px));
+  width: calc(100% - (64px + $sidebar-width));
   margin: 0 32px; }
   .main__section:not(:last-child) {
     margin-bottom: 40px; }
@@ -46,13 +46,13 @@ a {
   width: 220px; }
   .sidebar__list {
     padding-left: 1.2em; }
-  .sidebar__listItem {
+  .sidebar__list-item {
     padding: 4px 0; }
-    .sidebar__listItem a {
+    .sidebar__list-item a {
       display: inline-block;
       width: 100%;
       color: #333333; }
-    .sidebar__listItem:not(:first-child) {
+    .sidebar__list-item:not(:first-child) {
       margin-top: 8px; }
 
 /* ------------------
@@ -67,28 +67,28 @@ a {
     border-bottom: 1px solid #b7b7b7; }
   .heading__level2 {
     font-size: 24px; }
-  .heading__imgLink {
+  .heading__img-link {
     display: inline-block;
     width: 100%;
     height: 210px;
     background-color: #000000;
     position: relative;
     overflow: hidden; }
-    .heading__imgLink img {
+    .heading__img-link img {
       min-width: 100%;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
-      .heading__imgLink img:hover {
+      .heading__img-link img:hover {
         opacity: .8; }
 
-.textLink-moreinfo {
+.text-link__more-info {
   color: #00619a; }
 
-/* -----------
-  Header & Footer
--------------*/
+/* --------
+   header 
+---------- */
 .global-nav {
   margin: 0;
   padding-top: 40px;
@@ -102,10 +102,13 @@ a {
       padding: 8px 16px;
       color: #ffffff; }
 
+/* -----------
+  footer
+-------------*/
 .footer {
   width: 100%;
   background-color: #333333; }
-  .footer__copyRight {
+  .footer__copy-right {
     display: block;
     text-align: center;
     color: #ffffff; }
