--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,8 @@
 @import './parts/parts';
 
 //コンポーネント
-@import './components/header-footer';
+@import './components/header';
+@import './components/footer';
 @import './components/mv';
 
 
