--- a/src/scss/parts/_headings.scss
+++ b/src/scss/parts/_headings.scss
@@ -3,17 +3,17 @@
 -------------------- */ 
 
 .heading {
-  font-family:          $fontFamily-serif;
+  font-family:          $fontfamily-serif;
   margin-top:           0;
   &__level1 {
     font-size:          $font-size-heading1;
     padding-bottom:     8px;
-    border-bottom:      1px solid $borderColor-light;
+    border-bottom:      1px solid $border-color-light;
   }
   &__level2 {
     font-size:          24px;
   }
-  &__imgLink {
+  &__img-link {
     display:            inline-block;
     width:              100%;
     height:             210px;
