--- a/src/scss/parts/_layouts.scss
+++ b/src/scss/parts/_layouts.scss
@@ -19,7 +19,7 @@
 //2 columns - main area
 .main {
   display:              inline-block;
-  width:                calc(100% - (64px + $sidebar-width));  // 100% - (.mainの左右マージン + sidebar width)
+  width:                calc(100% - 64px - #{$sidebar-width});  // 100% - mainの左右マージン - sidebar width)
   margin:               0 32px;
   &__section:not(:last-child) {
     margin-bottom:      40px;
@@ -33,17 +33,17 @@
   right:                0;
   width:                $sidebar-width;
   &__list {
-    padding-left:       1.2em;
-  }
-  &__list-item {
-    padding:            4px 0; 
-    a {
-      display:          inline-block;
-      width:            100%;
-      color:            $font-color-base;
-    }
-    &:not(:first-child) {
-      margin-top:       8px;
+    padding-left:         1.2em;
+    &--item {
+      padding:            4px 0; 
+      &:not(:first-child) {
+        margin-top:       8px;
+      }
+      a {
+        display:          inline-block;
+        width:            100%;
+        color:            $font-color-base;
+      }
     }
   }
 }
