--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,15 +5,15 @@
 //navigation
 .global-nav {
   margin:               0;
-  padding-top:          40px;
+  padding-top:          $space-large-x;
   list-style:           none;
   text-align:           right;
   &__item {
     display:            inline-block;
-    margin:             0 8px;
+    margin:             0 $space-small-x;
     cursor:             pointer;
     a {
-      padding:          8px 16px;
+      padding:          $space-small-x $space-regular;
       color:            $font-color-light;
     }
   }
