--- a/src/scss/components/_mv.scss
+++ b/src/scss/components/_mv.scss
@@ -3,7 +3,7 @@
  ----------- */ 
 .mv {
   width:                100%;
-  height:               400px;
+  height:               $mv-height;
   background-image:     url(../assets/bg-portfolio.jpg);
   background-size:      cover;
   background-position:  top;
