[clean] css値のインデント調整、詳細リンクclass名修正、html全体のbasei font size指定

--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -3,19 +3,19 @@
 */
 
 html {
-  font-size: 93.75%;
+  font-size: $font-size-base-px;
 }
 
 body {
-  font-size:            $font-size-base;
-  font-family:          $fontfamily-gothic;
-  color:                $font-color-base;
-  margin:               0;
+  font-size:     $font-size-base;
+  font-family:   $fontfamily-gothic;
+  color:         $font-color-base;
+  margin:        0;
 }
 
 a {
-  text-decoration:      none;
+  text-decoration: none;
   &:hover {
-    text-decoration:    underline;
+    text-decoration: underline;
   }
 }
