[clean] list decimal用のpadding値を変数化

--- a/src/scss/parts/_layouts.scss
+++ b/src/scss/parts/_layouts.scss
@@ -33,7 +33,7 @@
   right:                0;
   width:                $sidebar-width;
   &__list {
-    padding-left:         1.2em;
+    padding-left:         $list-space-regular;
     &--item {
       padding:            $space-small 0; 
       &:not(:first-child) {
